# ETU_Basil_N

./: .gitignore  Kolpakov_idz1_4.py  README  README.md
1st course/2019/PR_2019/: chars.txt  charset.c
1st course/2019_CW/2019/: 9383_PR_Ноздрин_ВЯ_КР.odt
1st course/2019_INF/Nozdrin_Vasily_lb3/: 9383_INF_Ноздрин_ВЯ_ЛР3.odt
1st course/2020_PR/Nozdrin_Vasily_cw/: dialogcircle.h  mypng.h
1st course/2020_PR/Nozdrin_Vasily_cw_CLI/: Nozdrin_Vasily_cw  README.md  mypng.cpp
1st course/2020_PR/Nozdrin_Vasily_lb3/: 9383_PR_Ноздрин_ВЯ_ЛР3.odt
2019/: didges1.py
2019/INF_2019/Nozdrin_Vasily_lb4/: 9383_INF_Ноздрин_ВЯ_ЛР4.odt
2020/PR_2020/Nozdrin_Vasily_cw/: Makefile  Nozdrin_Vasily_cw  Nozdrin_Vasily_cw.pro  counter.cpp  counter.h  dialogcircle.cpp  main.cpp  moc_counter.cpp  mypng.cpp  selectcolorbutton.cpp  selectcolorbutton.h
2020/PR_2020/Nozdrin_Vasily_cw_CLI/: CMakeLists.txt  Nozdrin_Vasily_cw  main.cpp  mypng.cpp  mypng.h
2020/PR_2020/Nozdrin_Vasily_cw_CLI/tmp/: main.cpp
2020/PR_2020/Nozdrin_Vasily_lb2/: 9383_PR_Ноздрин_ВЯ_ЛР2.odt
2nd course/1st semester/Algorithms/lb5 and cw/: CMakeLists.txt  input.txt
2nd course/1st semester/Algorithms/lb5 and cw/modules/: BinTree.hpp  PrintWh.hpp  Queue.hpp  WeakHeap.hpp  WeakHeapLog.hpp
2nd course/1st semester/Algorithms/lb5 and cw/src/: main.cpp
2nd course/1st semester/CM/: 01_Linear_movement.ipynb  01_SIR.ipynb  01_Wolfs_and_Sheeps.ipynb  Euler.ipynb  Kahan summation algorithm.ipynb  Lagrange polynomial.ipynb  SIR.ipynb  Моисейченко21_09_20.ipynb
2nd course/1st semester/OOP/: CMakeLists.txt  main.cpp
2nd course/1st semester/OOP/src/: main.cpp
2nd course/1st semester/OOP/src/Buffs/: Buff.h
2nd course/1st semester/OOP/src/GameField/: Cell.cpp  Cell.h  Field.cpp  Field.h  FieldIter.cpp  FieldIter.h  FieldRowIter.cpp  FieldRowIter.h
2nd course/1st semester/OOP/src/logic/: Controls.cpp  Controls.h  Game.cpp  Game.h
2nd course/1st semester/asm/: hello_world.asm
2nd course/1st semester/test/: A.h  AA.cpp  AA.h  AARowIter.cpp  AARowIter.h  CMakeLists.txt  main.cpp
2nd course/2nd semester/2020 УЧЕБНАЯ ПРАКТИКА/: 2020 УЧЕБНАЯ ПРАКТИКА.7z
2nd course/2nd semester/WeakHeapSort/: README.md  pom.xml
3rd course/1st semester/MathPackages_2021/: README.md
3rd course/1st semester/ParallelAglos_2021/: README.md
3rd course/1st semester/ParallelAglos_2021/lab6/: CMakeLists.txt  Matrix.hpp  linear.cpp  main.cpp
3rd course/1st semester/ParallelAglos_2021/lab6/Implementations/: links  main1.c
3rd course/1st semester/Statistical Analysis/: idz2.ipynb  idz3.ipynb  idz_3.ipynb
3rd course/1st semester/sql-2021-9383/: README.md
3rd course/2nd semester/: Этика-29-06-2022.md
3rd course/2nd semester/FuncAnalysis/: Minkowski_norm.ipynb  Polyhedron.ipynb  dz1.ipynb
4th course/1st semester/Cryptography and data security/: Lab123.ipynb
4th course/1st semester/DSP/: lab1.ipynb
4th course/1st semester/MPhE/: DE3.ipynb  DE6.ipynb  DE7.ipynb  DE8.ipynb
C++/Names&Birthdays/: Names&Birthdays.cbp  Names&Birthdays.depend  Names&Birthdays.layout  birthday.cpp  birthday.h  main.cpp  person.cpp  person.h
C++/Project Class Example/: Project 1.cbp  Project 1.layout  main.cpp  myClass.cpp  myClass.h
C++/my Qt experiments/Mouse/: Mouse.pro  main.cpp  view.cpp  view.h
C++/my Qt experiments/Qt_1/: Qt_1.pro  main.cpp  myclass.cpp  myclass.h
C++/my Qt experiments/Qt_timers/: Makefile  Qt_1.pro  (+3 more)
Go/Gaem2D/: go.mod
Haskell/Proj1/: ChangeLog.md  Proj1.cabal  package.yaml
INF_2019/Nozdrin_Vasily_lb1/: 9383_INF_Ноздрин_ВЯ_ЛР1.odt~
INF_2019/Nozdrin_Vasily_lb2/: 9383_INF_Ноздрин_ВЯ_ЛР1.odt
Js/sort_visualisation/: package-lock.json  package.json
PR_2019/: test1_ex5
PR_2019/Nozdrin_Vasily_cw/: 9383_PR_Ноздрин_ВЯ_КР.odt
PR_2019/Nozdrin_Vasily_lb2/: 9383_PR_Ноздрин_ВЯ_ЛР2.odt~
PR_2019/Nozdrin_Vasily_lb4/: 9383_PR_Ноздрин_ВЯ_ЛР2.odt
Python/: fact.py
web/: package-lock.json
web/react-app-practice-1/: package-lock.json  package.json
(+235 files in other folders)
